Key Sequence detection
Forgot to notate the last change. Built out a key listener for webpages that adds an effect to a page when you type a certain keyword while having the page as your active window.

--- a/12 - Key Sequence Detection/index-START - Copy.html
+++ b/12 - Key Sequence Detection/index-START - Copy.html
@@ -19,7 +19,7 @@ window.addEventListener('keyup', (e) => {
     cornify_add();
   }
   console.log(pressed); //prints the pressed array to console
-}) //eventlistener for keypresses in the website window when selected
+}) //eventlistener for keypresses in the website window when selecte
 
 </script>
 </body>
